--- a/index.html
+++ b/index.html
@@ -801,6 +801,150 @@
                 google_signin: "Google ನೊಂದಿಗೆ ಸೈನ್ ಇನ್ ಮಾಡಿ",
                 accept_terms: "ನಾನು ನಿಯಮಗಳು ಮತ್ತು ಷರತ್ತುಗಳನ್ನು ಒಪ್ಪುತ್ತೇನೆ"
             }
+             bn: { // Bengali
+        login: "লগইন",
+        sign_up: "নিবন্ধন",
+        email: "ইমেইল",
+        password: "পাসওয়ার্ড",
+        confirm_password: "পাসওয়ার্ড নিশ্চিত করুন",
+        full_name: "পুরো নাম",
+        phone: "ফোন নম্বর",
+        remember_me: "আমাকে মনে রাখুন",
+        join_us: "বিনামূল্যে যোগ দিন!",
+        forgot_password: "পাসওয়ার্ড ভুলে গেছেন?",
+        already_account: "ইতিমধ্যে একটি অ্যাকাউন্ট আছে?",
+        website_title: "টকনিক্স",
+        google_signin: "Google দিয়ে সাইন ইন করুন",
+        accept_terms: "আমি শর্তাবলী এবং গোপনীয়তা নীতি মেনে নিচ্ছি"
+    },
+    te: { // Telugu
+        login: "లాగిన్",
+        sign_up: "నమోదు",
+        email: "ఇమెయిల్",
+        password: "పాస్వర్డ్",
+        confirm_password: "పాస్వర్డ్ నిర్ధారించండి",
+        full_name: "పూర్తి పేరు",
+        phone: "ఫోన్ నంబర్",
+        remember_me: "నన్ను గుర్తుంచుకో",
+        join_us: "ఉచితంగా చేరండి!",
+        forgot_password: "పాస్వర్డ్ మర్చిపోయారా?",
+        already_account: "ఇప్పటికే ఖాతా ఉందా?",
+        website_title: "టాక్నిక్స్",
+        google_signin: "Google తో సైన్ ఇన్ చేయండి",
+        accept_terms: "నేను నిబంధనలు మరియు గోప్యతా విధానాన్ని అంగీకరిస్తున్నాను"
+    },
+    mr: { // Marathi
+        login: "लॉगिन",
+        sign_up: "साइन अप",
+        email: "ईमेल",
+        password: "पासवर्ड",
+        confirm_password: "पासवर्डची पुष्टी करा",
+        full_name: "पूर्ण नाव",
+        phone: "फोन नंबर",
+        remember_me: "मला आठवा",
+        join_us: "विनामूल्य सामील व्हा!",
+        forgot_password: "पासवर्ड विसरलात?",
+        already_account: "आधीपासून खाते आहे?",
+        website_title: "टॉक्निक्स",
+        google_signin: "Google सह साइन इन करा",
+        accept_terms: "मी अटी आणि गोपनीयता धोरण स्वीकारतो"
+    },
+    ta: { // Tamil
+        login: "உள்நுழை",
+        sign_up: "பதிவு செய்க",
+        email: "மின்னஞ்சல்",
+        password: "கடவுச்சொல்",
+        confirm_password: "கடவுச்சொல்லை உறுதிப்படுத்தவும்",
+        full_name: "முழு பெயர்",
+        phone: "தொலைபேசி எண்",
+        remember_me: "என்னை நினைவில் வைத்துக்கொள்",
+        join_us: "இலவசமாக சேரவும்!",
+        forgot_password: "கடவுச்சொல் மறந்துவிட்டீர்களா?",
+        already_account: "ஏற்கனவே கணக்கு உள்ளதா?",
+        website_title: "டாக்நிக்ஸ்",
+        google_signin: "Google மூலம் உள்நுழையவும்",
+        accept_terms: "நான் விதிமுறைகள் மற்றும் தனியுரிமைக் கொள்கையை ஏற்கிறேன்"
+    },
+    gu: { // Gujarati
+        login: "લૉગિન",
+        sign_up: "સાઇન અપ",
+        email: "ઇમેઇલ",
+        password: "પાસવર્ડ",
+        confirm_password: "પાસવર્ડની પુષ્ટિ કરો",
+        full_name: "પૂરું નામ",
+        phone: "ફોન નંબર",
+        remember_me: "મને યાદ રાખો",
+        join_us: "મફતમાં જોડાઓ!",
+        forgot_password: "પાસવર્ડ ભૂલી ગયા છો?",
+        already_account: "પહેલાથી જ ખાતું છે?",
+        website_title: "ટોકનિક્સ",
+        google_signin: "Google સાથે સાઇન ઇન કરો",
+        accept_terms: "હું નિયમો અને ગોપનીયતા નીતિ સ્વીકારું છું"
+    },
+    ml: { // Malayalam
+        login: "ലോഗിൻ",
+        sign_up: "രജിസ്റ്റർ",
+        email: "ഇമെയിൽ",
+        password: "പാസ്‌വേഡ്",
+        confirm_password: "പാസ്‌വേഡ് സ്ഥിരീകരിക്കുക",
+        full_name: "പൂർണ്ണ നാമം",
+        phone: "ഫോൺ നമ്പർ",
+        remember_me: "എന്നെ ഓർക്കുക",
+        join_us: "സൗജന്യമായി ചേരുക!",
+        forgot_password: "പാസ്‌വേഡ് മറന്നോ?",
+        already_account: "ഇതിനകം അക്കൗണ്ട് ഉണ്ടോ?",
+        website_title: "ടോക്നിക്സ്",
+        google_signin: "Google ഉപയോഗിച്ച് സൈൻ ഇൻ ചെയ്യുക",
+        accept_terms: "ഞാൻ നിബന്ധനകളും സ്വകാര്യതാ നയവും അംഗീകരിക്കുന്നു"
+    },
+    pa: { // Punjabi
+        login: "ਲਾਗਿਨ",
+        sign_up: "ਸਾਈਨ ਅੱਪ",
+        email: "ਈਮੇਲ",
+        password: "ਪਾਸਵਰਡ",
+        confirm_password: "ਪਾਸਵਰਡ ਪੁਸ਼ਟੀ ਕਰੋ",
+        full_name: "ਪੂਰਾ ਨਾਮ",
+        phone: "ਫ਼ੋਨ ਨੰਬਰ",
+        remember_me: "ਮੈਨੂੰ ਯਾਦ ਰੱਖੋ",
+        join_us: "ਮੁਫ਼ਤ ਵਿੱਚ ਸ਼ਾਮਲ ਹੋਵੋ!",
+        forgot_password: "ਪਾਸਵਰਡ ਭੁੱਲ ਗਏ?",
+        already_account: "ਪਹਿਲਾਂ ਹੀ ਖਾਤਾ ਹੈ?",
+        website_title: "ਟਾਕਨਿਕਸ",
+        google_signin: "Google ਨਾਲ ਸਾਈਨ ਇਨ ਕਰੋ",
+        accept_terms: "ਮੈਂ ਨਿਯਮ ਅਤੇ ਗੋਪਨੀਯਤਾ ਨੀਤੀ ਨੂੰ ਸਵੀਕਾਰ ਕਰਦਾ ਹਾਂ"
+    },
+    or: { // Odia
+        login: "ଲଗଇନ୍",
+        sign_up: "ନାମଲେଖନ କରନ୍ତୁ",
+        email: "ଇମେଲ୍",
+        password: "ପାସୱାର୍ଡ",
+        confirm_password: "ପାସୱାର୍ଡ ନିଶ୍ଚିତ କରନ୍ତୁ",
+        full_name: "ପୂରା ନାମ",
+        phone: "ଫୋନ୍ ନମ୍ବର",
+        remember_me: "ମୋତେ ମନେ ରଖନ୍ତୁ",
+        join_us: "ମାଗଣାରେ ଯୋଗ ଦିଅନ୍ତୁ!",
+        forgot_password: "ପାସୱାର୍ଡ ଭୁଲି ଗଲେ କି?",
+        already_account: "ପୂର୍ବରୁ ଖାତା ଅଛି କି?",
+        website_title: "ଟକନିକ୍ସ",
+        google_signin: "Google ସହିତ ସାଇନ୍ ଇନ୍ କରନ୍ତୁ",
+        accept_terms: "ମୁଁ ନିୟମ ଏବଂ ଗୋପନୀୟତା ନୀତି ଗ୍ରହଣ କରୁଛି"
+    },
+    as: { // Assamese
+        login: "লগিন",
+        sign_up: "ছাইন আপ",
+        email: "ইমেইল",
+        password: "পাছৱৰ্ড",
+        confirm_password: "পাছৱৰ্ড নিশ্চিত কৰক",
+        full_name: "পূৰ্ণ নাম",
+        phone: "ফোন নম্বৰ",
+        remember_me: "মোক মনত ৰাখিব",
+        join_us: "মুক্তভাৱে যোগদান কৰক!",
+        forgot_password: "পাছৱৰ্ড পাহৰিলে?",
+        already_account: "আগতেই একাউণ্ট আছে নেকি?",
+        website_title: "টকনিক্স",
+        google_signin: "Google ৰ সৈতে ছাইন ইন কৰক",
+        accept_terms: "মই নীতি-নিয়ম আৰু গোপনীয়তা নীতি মানি লওঁ"
+    }
         };
 
         // Image data with captions in all languages
